# DocuMind

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/routes/: embeddings.py  eval.py  jobs.py  llm.py  ocr.py  pipelines.py  providers.py  ui.py  (+4 more)
app/core/: auth.py  errors.py  logging.py  middleware.py  model_manager.py  pipelines.py  secrets.py  settings.py
app/eval/: benchmarks.py  evaluator.py  metrics.py  stress.py
app/ocr/: __init__.py  base.py  deepseek.py  glm.py  normalize.py  pdf.py  router.py  structure.py
app/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py  registry.py
app/schemas/: common.py  embedding.py  eval.py  jobs.py  llm.py  ocr.py  pipeline.py  providers.py  retrieval.py  runtime.py  ui.py
app/services/: chunking.py  document_qa.py  embedding_service.py  hybrid_retrieval.py  indexing.py  milvus_store.py  ocr_postprocess.py  pipeline_runner.py  reranker.py  retrieval_store.py  sparse_retrieval.py
app/workers/: cli.py  queue.py  redis_queue.py  worker.py
docs/: api-overview.md  architecture.md  development.md  usage.md  user-guide.md  workflows.md
tests/: test_byok.py  test_chunking.py  test_embeddings.py  test_eval.py  test_infrastructure.py  test_jobs.py  test_llm.py  test_ocr.py  test_ocr_postprocess.py  test_pdf_ocr.py  test_providers.py  test_reranker.py  test_response_shapes.py  test_retrieval_store.py  test_system.py  test_upload_and_ui.py
ui/: README.md  index.html  package-lock.json  package.json
ui/src/: App.tsx  api.ts  styles.css  types.ts
(+10 files in other folders)
